--- a/main.css
+++ b/main.css
@@ -14,16 +14,17 @@
     grid-template-areas:
     " logo options";
 
-
 }
 
 .logo{
     grid-area:logo;
 
-
 }
 
-.logo img{width:400px}
+.logo img{
+    width:400px
+
+}
 
 
 .options{
@@ -35,18 +36,25 @@
     
 }
 
-.store {display:grid;
-grid-template-areas: 
-"p4 p5 p6 p7 p8";
-justify-content:center;
-grid-gap:30px;
+.store {
+    display:grid;
+    grid-template-areas: 
+    "p4 p5 p6 p7 p8";
+    justify-content:center;
+    grid-gap:30px;
+
 }
 
-.row2{display:grid;
-grid-template-areas:
-"img2 img3 img4"}
+.row2{
+    display:grid;
+    grid-template-areas:
+    "img2 img3 img4"
+}
 
-.row1 img{width:100%}
+.row1 img{
+    width:100%
+
+}
 
 .row2 img{
     width:450px;
@@ -65,6 +73,10 @@ grid-template-areas:
     width:280px;
     height:300px;
 
+}
+
+.sponsor img {
+    width:400px;
 
 }
 .row3{
@@ -75,9 +87,27 @@ grid-template-areas:
 
 }
 
-.text4{display:grid;
+.text4{
+    display:grid;
     justify-content:center;
 }
+
+.text7 h5:nth-child(3){
+    border:1px solid grey;
+    display:grid;
+    justify-content:center;
+
+}
+
+.text7 h5:nth-child(4){
+    border:1px solid black;
+    background-color:black;
+    color:white;
+    display:grid;
+    justify-content:center;
+
+}
+
 
 .row5{
     display:grid;
@@ -86,12 +116,18 @@ grid-template-areas:
     justify-content:space-around;
 }
 
+.footer{display:grid;
+grid-template-areas:
+"text5 text6 text7";
+justify-content:space-between;
+padding-bottom:50px
 
-.p1{grid-area:p1;}
-.p2{grid-area:p2;}
-.p3{grid-area:p3;}
-.p4{grid-area:p4;}
-.p5{grid-area:p5;}
-.p6{grid-area:p6;}
-.p8{grid-area:p7;}
-.p8{grid-area:p8;}
+}
+
+.sponsor{
+    display:grid;
+    grid-template-areas:
+    "text8 img14";
+    justify-content:space-between;
+}
+
