--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+
 
 .text1{
     grid-area:text1;
@@ -90,23 +92,27 @@
 .text4{
     display:grid;
     justify-content:center;
+    /* font-family: raleway sans-serif; */
+}
+.text4 {
+    font-family: raleway, sans-serif;
 }
 
-.text7 h5:nth-child(3){
-    border:1px solid grey;
-    display:grid;
-    justify-content:center;
-
-}
-
-.text7 h5:nth-child(4){
-    border:1px solid black;
+button{color:white;
     background-color:black;
-    color:white;
-    display:grid;
-    justify-content:center;
+    font-size:30px
 
 }
+
+input{
+    width:90%;
+    font-size:13px;
+    padding:8px;
+    margin-bottom:20px;
+
+}
+
+
 
 
 .row5{
@@ -177,14 +183,8 @@ padding-bottom:50px
         grid-template-areas:
         "text5 text6"
     }
-    .text7 h5:nth-child(3){
-        width:200%
 
-    }
-
-    .text7 h5{
-        font-size:20px
-    }
+    
 
     .lock{
         visibility:visible;
@@ -211,7 +211,13 @@ padding-bottom:50px
         width:100%
     }
 
-    
+    .section img{
+        height:50px;
+    }
+
+    .lock img{ height:50px
+    }
+
   }
 
 
@@ -303,18 +309,17 @@ padding-bottom:50px
         "text8";
 
     }
-
-    .text7 h5:nth-child(3){
-        width:170%;
-
-    }
-
-    .text7 h5{
-        font-size:20px
+    input{
+        width:160%
     }
 
     .text8{
         padding-left:25%;
         padding-bottom:50px
     }
-}
+    .img14{
+        width:100%;
+        border-top:1px solid grey;
+    padding-top:30px}
+
+    }
